fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ body {
     bottom: 0;
     text-align: center;
     margin: auto;
-    margin-top: 45vh;
+    margin-top: 40vh;
     max-width: 80%;
     width: fit-content;
     height: fit-content;
